# bartrix

./: CMakeLists.txt  README.md  sdkconfig.old
bart_gtfs_data/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  stop_times.txt  transfers.txt  trips.txt
bartrix-sim/: CMakeLists.txt  main.cpp
bartrix-sim/include/: csv.h  stop.h
bartrix-sim/src/: csv.cpp  main.cpp  stop.cpp
bartrix-target/: CMakeLists.txt  export.sh
bartrix-target/main/: main.cpp
cmake/: Assets.cmake  TextAssetTemplate.cpp.in  TextAssetTemplate.h.in
gtfs-tester/: main.py  pyproject.toml
main/: CMakeLists.txt
src/: main.c  main.cpp
